RENO-1640: Edge spacing and alignment issues

--- a/src/components/location-finder/SearchHeader/SearchHeader.scss
+++ b/src/components/location-finder/SearchHeader/SearchHeader.scss
@@ -12,7 +12,7 @@
 		padding-bottom: $space-xxs;
 	}
   
-  @include space-inset-m;
+  padding: $space-m $space-s;
 
   background: $gray-xlight;
 
@@ -24,5 +24,6 @@
 
   .search-header__inner {
     @include wrapper;
+    @include ds-layout-override;
   }
 }
